--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,6 +1,21 @@
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.date {
+  margin-top: 5px;
+}
+
+span {
+  color: #9f9f9f;
+  font-size: 1.8rem;
+}
+
+@media screen and (max-width: 723px) {
+  span {
+    font-size: 1.2rem;
+  }
 }
