--- a/src/app/components/task-item/task-item.component.html
+++ b/src/app/components/task-item/task-item.component.html
@@ -1,7 +1,14 @@
-<div class="task">
-  <h3>
-    {{task.text}}
-    <fa-icon (click)="onDestroy(task)" [ngStyle]="{'color': '#0070c2'}" [icon] = "faCheckCircle"></fa-icon>
-  </h3>
-  <p class="reminder">{{task.day}}</p>
+<div [ngClass]="{reminder: task.reminder}" class="task" (dblclick)="onToggle(task)">
+  <span>
+    <h3 class="task-name">
+      {{task.text}}
+    </h3>
+    <p class="reminder">{{task.day}}</p>
+  </span>
+  <span class="task-actions">
+    <fa-icon (click)="onDestroy(task)" [ngStyle]="{'color': '#0070c2'}" [icon]="faCheckCircle"></fa-icon>
+    <fa-icon (click)="onToggle(task)" [ngStyle]="{'color': task.reminder===true?'grey':'#0070c2'}" [icon]="faBellOn">
+    </fa-icon>
+  </span>
+
 </div>
