--- a/src/app/components/task-item/task-item.component.scss
+++ b/src/app/components/task-item/task-item.component.scss
@@ -1,18 +1,27 @@
 .task {
-    background-color: #203147;
-    margin: 5px;
-    padding: 15px 25px;
-    cursor: pointer;
-    border-radius: 5px;
+  background-color: #203147;
+  margin: 5px;
+  padding: 15px 25px;
+  cursor: pointer;
+  border-radius: 5px;
+  border-left: 15px solid #1eb972;
+  display: flex;
+  justify-content: space-between;
+}
+
+.task-name {
+  display: flex;
+  flex-direction: column;
 }
 
 .task.reminder {
-    border-left: 5px solid #f47960;
+  border-left: 15px solid #f3ae2d;
 }
 
-.task h3 {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+fa-icon {
+    font-size: 2em;
+    margin: 1rem;
 }
+
+
 
