--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,7 +48,7 @@ p {
   color: #fff;
   border: none;
   padding: 1rem 2rem;
-  margin: 1rem;
+  margin-bottom: 3rem;
   border-radius: 5px;
   cursor: pointer;
   text-decoration: none;
@@ -63,23 +63,35 @@ p {
 
 .btn-block {
   display: block;
-  width: 100%;
+  width: 40%;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 1.5rem;
 }
 
 .form-control {
-  margin: 20px 0;
+  margin: 20px auto;
+  width: 70%;
 }
 
 .form-control label {
   display: block;
+  font-size: 1.5rem;
 }
 
 .form-control input {
+  border-radius: 10px;
   width: 100%;
-  height: 40px;
-  margin: 5px;
-  padding: 3px 7px;
-  font-size: 17px;
+  height: 50px;
+  margin: 5px auto;
+  padding: 10px;
+  outline: #121e2a;
+  border: #121e2a solid 5px;
+}
+
+.form-control input:focus {
+  outline: #0070c2;
+  border: #0070c2 solid 5px;
 }
 
 .form-control-check {
@@ -96,4 +108,3 @@ p {
   flex: 2;
   height: 20px;
 }
-
