--- a/src/app/components/task-item/task-item.component.scss
+++ b/src/app/components/task-item/task-item.component.scss
@@ -1,10 +1,10 @@
 .task {
   background-color: #203147;
-  margin: 5px;
-  padding: 15px 25px;
+  margin: 3px;
+  padding: 10px 25px;
   cursor: pointer;
   border-radius: 5px;
-  border-left: 15px solid #1eb972;
+  border-left: 10px solid #1eb972;
   display: flex;
   justify-content: space-between;
 }
@@ -15,13 +15,25 @@
 }
 
 .task.reminder {
-  border-left: 15px solid #f3ae2d;
+  border-left: 10px solid #f3ae2d;
+}
+
+.task-actions {
+  display: flex;
 }
 
 fa-icon {
     font-size: 2em;
     margin: 1rem;
 }
+
+@media only screen and (max-width: 646px) {
+  fa-icon {
+    font-size: 1.8rem;
+  }
+ }
+ 
+
 
 
 
